# grc-platform

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
backend/: Dockerfile
backend/app/: main.py
backend/app/application/: use_cases.py
backend/app/common/: models.py
backend/app/core/: celery_app.py  config.py  rate_limit.py  redis_client.py  security.py  security_headers.py  tasks.py
backend/app/database/: __init__.py  model_registry.py  session.py
backend/app/domain/: entities.py  repositories.py
backend/app/infrastructure/: cache.py  database.py  models.py  repositories.py
backend/app/security/: __init__.py  permissions.py  tokens.py
backend/app/workflow/: __init__.py  approval.py  notifications.py  state_machine.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 202606250001_initial_schema.py  202607090001_auth_rbac_and_tenancy.py  202607090002_compliance_engine.py  202607090003_audits.py  202607090004_documents.py  202607090005_assets_cmdb.py  202607090006_ai.py  202607090007_notifications.py  202607100001_public_domain_requirement_catalogs.py  202607100002_sso_permission.py  202607100003_sso_connections.py  202607110001_departments_threats_vulnerabilities.py  202607120001_incidents.py  202607130001_ebios_rm_linking.py  202607140001_tenants_and_tasks.py  202607150001_ebios_rm_workshop2.py  202607160001_ebios_rm_workshop3.py  202607170001_ebios_rm_workshop4.py  202607180001_ebios_rm_workshop5.py
backend/tests/: conftest.py  test_ai.py  test_assets.py  test_audits.py  test_auth.py  test_celery_tasks.py  test_compliance_engine.py  test_departments.py  test_documents.py  test_ecosystem_parties.py  test_feared_events.py  test_health.py  test_incidents.py  test_notifications.py  test_operational_scenarios.py  test_rate_limit.py  test_rbac.py  test_risk_origins.py  test_risk_sources.py  test_risk_treatments.py  test_risks.py  test_sso.py  test_strategic_scenarios.py  test_tasks.py  test_tenant_isolation.py  test_tenants.py  test_threats.py  test_vulnerabilities.py  test_workflow_state_machine.py
docs/: api.md  architecture.md  database.md  deployment.md  development.md  installation.md  roadmap.md  security.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: ai.ts  assets.ts  audits.ts  auth.ts  client.ts  compliance.ts  departments.ts  documents.ts  ecosystem-parties.ts  feared-events.ts  grc.ts  incidents.ts  notifications.ts  operational-scenarios.ts  rbac.ts  risk-origins.ts  risk-sources.ts  risk-treatments.ts  sso.ts  strategic-scenarios.ts  tasks.ts  threats.ts  types.ts  users.ts  vulnerabilities.ts
frontend/src/auth/: AuthContext.tsx  RedirectIfAuthenticated.tsx  RequireAuth.tsx  tokenStorage.ts
frontend/src/layout/: AppShell.tsx
frontend/src/pages/: AiChatPage.tsx  AssessmentDetailPage.tsx  AssessmentsPage.tsx  AssetsPage.tsx  AuditDetailPage.tsx  (+27 more)
grc-academy/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
grc-academy/src/: App.tsx  main.tsx
helm/: README.md
helm/grc-platform/: Chart.yaml  values.yaml
infra/postgres/: README.md
k8s/: README.md  backend-deployment.yaml  celery-beat-deployment.yaml  celery-worker-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  kustomization.yaml  migration-job.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.example.yaml
terraform/aws/: README.md  ecr.tf  elasticache.tf  main.tf  outputs.tf  rds.tf  variables.tf
(+569 files in other folders)
