[project]
name = "grc-platform"
version = "0.1.0"
description = "Production-ready GRC platform bootstrap"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "argon2-cffi==23.1.0",
    "asyncpg==0.29.0",
    "celery==5.4.0",
    "email-validator==2.2.0",
    "fastapi==0.111.0",
    "greenlet==3.0.3",
    "httpx==0.27.0",
    "passlib==1.7.4",
    "psycopg[binary]==3.2.1",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.0.7",
    "SQLAlchemy==2.0.31",
    "structlog==24.2.0",
    "uvicorn[standard]==0.30.1",
]

[project.optional-dependencies]
dev = [
    "coverage==7.6.1",
    "mypy==1.11.1",
    "pytest==8.3.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "ruff==0.5.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
