[project]
name = "grc-platform"
version = "0.1.0"
description = "Production-ready GRC platform bootstrap"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "argon2-cffi==23.1.0",
    "asyncpg==0.29.0",
    "celery==5.4.0",
    "email-validator==2.2.0",
    "fastapi==0.139.0",
    "greenlet==3.0.3",
    "httpx==0.27.0",
    "passlib==1.7.4",
    "psycopg[binary]==3.2.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.32",
    "redis==5.0.7",
    "SQLAlchemy==2.0.31",
    "structlog==24.2.0",
    "uvicorn[standard]==0.30.1",
]

[project.optional-dependencies]
dev = [
    "coverage==7.15.0",
    "mypy==1.11.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.5.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# Migrations are verbose by construction (long sa.ForeignKeyConstraint(...) calls);
# wrapping them for line-length doesn't improve readability.
"backend/migrations/versions/*.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI convention is `param: T = Depends(...)` / `Query(...)` / `Body(...)` --
# these are resolved once per request by FastAPI, not shared mutable state, so B008
# ("function call in default argument") doesn't apply to them.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Path", "fastapi.Header"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
